# LocalVideo

./: .dockerignore  .env.docker.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.backend  Dockerfile.frontend  Justfile  README.md  README_EN.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 39b69cb487e2_initial_schema.py
backend/app/: __init__.py  config.py  image_catalog.py  main.py
backend/app/api/: deps.py
backend/app/core/: types.py  (+14 more)
backend/scripts/: faster_whisper_runner.py  generate_content_payload.py  generate_narrator_preset_images.py  migrate_character_to_reference.py  migrate_role_identity_to_ref.py  retrim_local_segments.py
backend/tests/: test_audio_acoustic_features.py  test_audio_preview_locale.py  test_audio_reuse.py  test_audio_split_alignment.py  test_compose_canvas_strategy.py  test_content_prompts.py  test_faster_whisper_runtime.py  test_first_frame_desc.py  test_frame_warnings.py  test_kling_auth.py  test_minimax_providers.py  test_reference_role_mapping.py  test_seedance_provider.py  test_storage_path.py  test_storyboard_smart_merge.py  test_task_scheduler_progress.py  test_video_capabilities.py  test_video_model_connectivity.py  test_video_provider_surface.py  test_video_runtime_defaults.py  test_video_single_take_batch.py  test_visual_prompt.py  test_voice_library_builtin_sync.py  test_voice_library_naming.py  test_wan2gp_video_runtime_config.py  test_xiaomi_mimo_tts_provider.py
(+283 files in other folders)
