[project]
name = "localvideo-backend"
version = "0.1.0"
description = "LocalVideo - AI-powered video generation pipeline backend"
authors = [{ name = "XucroYuri" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "edge-tts>=6.1.0",
    "openai>=1.0.0",
    "tavily-python>=0.5.0",
    "mutagen>=1.47.0",
    "pillow>=12.1.0",
    "faster-whisper>=1.2.1",
    "crawl4ai>=0.7.0",
    "google-auth>=2.48.0",
    "google-genai>=1.62.0",
    "json-repair>=0.58.6",
]

[project.optional-dependencies]
dev = [
    "basedpyright==1.38.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff==0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
